--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://dpg-cn9dtr8cmk4c739vita0-a.oregon-postgres.render.com/util_db?currentSchema=block_dev
+spring.datasource.url=jdbc:postgresql://oregon-postgres.render.com/util_db?currentSchema=block_dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=util_db_user
 spring.datasource.password=root
