--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url=jdbc:postgresql://oregon-postgres.render.com/util_db?currentSchema=block_dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=util_db_user
-spring.datasource.password=root
+spring.datasource.password=MUXCnhKfN3LpMFIeZqX5cC0WA0ZmPxzT
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.h2.console.enabled=true
 server.port=8080
+
 
