--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://oregon-postgres.render.com/util_db?currentSchema=block_dev
+spring.datasource.url=jdbc:postgresql://oregon-postgres.render.com:5432/util_db?currentSchema=block_dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=util_db_user
 spring.datasource.password=MUXCnhKfN3LpMFIeZqX5cC0WA0ZmPxzT
